# radroots

./: Cargo.toml  README  README.md
.github/workflows/: sdk-core-sync-pr.yml
app-core/: Cargo.toml
app-ffi-swift/: Cargo.toml
app-wasm/: Cargo.toml
bindings/: package.json
bindings/ts/: package.json
contract/: README.md
core/: Cargo.toml
core/bindings/ts/: package.json
crates/app-core/: Cargo.toml  README.md
crates/app-core/tests/: logging_error.rs  no_nostr_runtime.rs
crates/app-ffi-swift/: Cargo.toml
crates/app-ffi-swift/src/: lib.rs
crates/app-wasm/: Cargo.toml  README.md
crates/app-wasm/src/: lib.rs
crates/core/: Cargo.toml  README  README.md
crates/event_store/: Cargo.toml  README
crates/events/: Cargo.toml  README  README.md
crates/events-codec/: Cargo.toml  README.md
crates/events-codec-wasm/: Cargo.toml  README.md
crates/events-indexed/: Cargo.toml  README.md
crates/events_codec/: Cargo.toml  README  README.md
crates/events_codec_wasm/: Cargo.toml  README.md
crates/events_indexed/: Cargo.toml  README  README.md
crates/geocoder/: Cargo.toml  README  README.md
crates/identity/: Cargo.toml  README  README.md
crates/local_events/: Cargo.toml  README
crates/log/: Cargo.toml  README  README.md
crates/net/: Cargo.toml  README  README.md
crates/net-core/: Cargo.toml  README.md
crates/net_core/: Cargo.toml  README  README.md
crates/nostr/: Cargo.toml  README  README.md
crates/nostr-accounts/: Cargo.toml  README.md
crates/nostr-connect/: Cargo.toml
crates/nostr-ndb/: Cargo.toml  README.md
crates/nostr-runtime/: Cargo.toml  README.md
crates/nostr-signer/: Cargo.toml
crates/nostr_accounts/: Cargo.toml  README  README.md
crates/nostr_connect/: Cargo.toml  README
crates/nostr_ndb/: Cargo.toml  README  README.md
crates/nostr_runtime/: Cargo.toml  README  README.md
crates/nostr_signer/: Cargo.toml  README
crates/outbox/: Cargo.toml  README
crates/protected-store/: Cargo.toml  README.md
crates/protected_store/: Cargo.toml  README  README.md
crates/relay_transport/: Cargo.toml
crates/replica-db/: Cargo.toml  README.md
crates/replica-db-schema/: Cargo.toml  README.md
crates/replica-db-wasm/: Cargo.toml  README.md
crates/replica-sync/: Cargo.toml  README.md
crates/replica-sync-wasm/: Cargo.toml  README.md
crates/replica_db/: Cargo.toml  README  README.md
crates/replica_db_schema/: Cargo.toml  README  README.md
crates/replica_db_wasm/: Cargo.toml  README.md
crates/replica_sync/: Cargo.toml  README  README.md
crates/replica_sync_wasm/: Cargo.toml  README.md
crates/runtime/: Cargo.toml  README  README.md
crates/runtime-distribution/: Cargo.toml  README.md
crates/runtime-manager/: Cargo.toml  README.md
crates/runtime-paths/: Cargo.toml  README.md
crates/runtime_distribution/: Cargo.toml  README  README.md
crates/runtime_distribution/src/: lib.rs
crates/runtime_manager/: Cargo.toml  README  README.md
crates/runtime_paths/: Cargo.toml  README  README.md
crates/sdk/: Cargo.toml  README
crates/sdk/src/: config.rs
crates/sdk/tests/: client.rs  radrootsd.rs  relay_direct.rs
crates/secret-vault/: Cargo.toml  README.md
crates/secret_vault/: Cargo.toml  README  README.md
crates/simplex-agent-proto/: Cargo.toml
crates/simplex-agent-runtime/: Cargo.toml
crates/simplex-agent-store/: Cargo.toml
crates/simplex-chat-proto/: Cargo.toml
crates/simplex-interop-tests/: Cargo.toml
crates/simplex-smp-crypto/: Cargo.toml
crates/simplex-smp-proto/: Cargo.toml
crates/simplex-smp-transport/: Cargo.toml
crates/simplex_agent_proto/: Cargo.toml  README
crates/simplex_agent_runtime/: Cargo.toml  README
crates/simplex_agent_store/: Cargo.toml  README
crates/simplex_chat_proto/: Cargo.toml  README
crates/simplex_interop_tests/: Cargo.toml  README
crates/simplex_smp_crypto/: Cargo.toml  README
crates/simplex_smp_proto/: Cargo.toml  README
crates/simplex_smp_transport/: Cargo.toml  README
crates/sp1_guest_trade/: Cargo.toml
crates/sp1_host_trade/: Cargo.toml
crates/sql-core/: Cargo.toml  README.md
crates/sql-wasm-bridge/: Cargo.toml  README.md
crates/sql-wasm-core/: Cargo.toml  README.md
crates/sql_core/: Cargo.toml  README  README.md
crates/sql_wasm_bridge/: Cargo.toml  README  README.md
crates/sql_wasm_core/: Cargo.toml  README  README.md
crates/tangle-db/: Cargo.toml
crates/tangle-db-schema/: Cargo.toml
crates/tangle-db-wasm/: Cargo.toml
crates/tangle-events/: Cargo.toml
crates/tangle-events-wasm/: Cargo.toml
crates/test-fixtures/: Cargo.toml
crates/test_fixtures/: Cargo.toml  README
crates/trade/: Cargo.toml  README  README.md
crates/types/: Cargo.toml  README  README.md
crates/xtask/: Cargo.toml  README  README.md
events/: Cargo.toml
events-codec-wasm/: Cargo.toml
events-indexed/: Cargo.toml
events-indexed/bindings/ts/: package.json
events/bindings/ts/: package.json
identity/: Cargo.toml
net-core/: Cargo.toml
nostr/: Cargo.toml
nostr-ndb/: Cargo.toml
nostr-runtime/: Cargo.toml
runtime/: Cargo.toml
spec/: README.md
spec/conformance/: README.md
spec/exports/: go.toml
spec/sdk-exports/: go.toml
sql-core/: Cargo.toml
sql-wasm-bridge/: Cargo.toml
sql-wasm-core/: Cargo.toml
tangle-db/: Cargo.toml
tangle-db-schema/: Cargo.toml
tangle-db-schema/bindings/ts/: package.json
tangle-db-wasm/: Cargo.toml
tangle-events-wasm/: Cargo.toml
tangle-schema/: Cargo.toml
tangle-schema/bindings/ts/: package.json
tangle-sql/: Cargo.toml
tangle-sql-wasm/: Cargo.toml
trade/: Cargo.toml
trade/bindings/ts/: package.json
types/: Cargo.toml
types/bindings/ts/: package.json
