[package]
name = "radroots-identity"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []

[dependencies]
radroots-runtime = { workspace = true }
nostr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
