[package]
name = "radroots-identity"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["std"]
std = ["dep:radroots-runtime"]
ts-rs = ["dep:ts-rs"]

[dependencies]
radroots-runtime = { workspace = true, optional = true }
radroots-events = { workspace = true, default-features = false, features = ["serde"] }
nostr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
