[package]
name = "radroots-net-core"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
rt = ["std", "dep:tokio"]
nostr-client = [
    "std",
    "dep:radroots-events",
    "radroots-events/serde",
    "dep:secrecy",
    "dep:hex",
    "dep:tempfile",
    "dep:serde_json",
    "dep:radroots-nostr"
]
directories = ["std", "dep:directories"]
fs-persistence = ["std"]

[dependencies]
radroots-events = { workspace = true, optional = true, default-features = true, features = ["std", "serde", "typeshare"] }
radroots-log = { workspace = true }
radroots-nostr = { workspace = true, optional = true, default-features = true, features = ["client", "events"] }
directories = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
tracing-appender = { workspace = true }
futures = { workspace = true }
