[package]
name = "radroots-nostr-runtime"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std", "nostr-client", "rt"]
std = []
rt = ["std", "dep:tokio"]
nostr-client = ["std", "dep:radroots-nostr"]
nostr-ndb = ["nostr-client"]

[dependencies]
radroots-nostr = { workspace = true, optional = true, default-features = true, features = ["client"] }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "sync", "time"] }
