[package]
name = "radroots-runtime"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = []
cli = ["dep:clap"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
config = { workspace = true }
radroots-log = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true } 
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
toml = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true } 
