[package]
name = "radroots-sql-core"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
web = ["dep:radroots-sql-wasm-bridge", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
native = ["dep:rusqlite"]
embedded = []

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
radroots-sql-wasm-bridge = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
rusqlite = { workspace = true, features = ["bundled"], optional = true }
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
