[package]
name = "radroots-sql-wasm-bridge"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true } 
