[package]
name = "radroots-tangle-db-wasm"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots-sql-core = { workspace = true, features = ["web"] }
radroots-sql-wasm-core = { workspace = true }
radroots-tangle-db = { workspace = true }
radroots-tangle-db-schema = { workspace = true }
radroots-tangle-events = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
