[package]
name = "radroots-tangle-schema"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["rlib"]

[features]
default = []
ts-rs = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ts-rs = { workspace = true, optional = true }
radroots-types = { workspace = true }
