[package]
name = "radroots-tangle-sql"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []
web = ["radroots-sql-core/web"]
native = ["radroots-sql-core/native"]
embedded = ["radroots-sql-core/embedded"]

[dependencies]
radroots-sql-core = { workspace = true }
radroots-tangle-schema = { workspace = true }
radroots-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
