[package]
name = "radroots-trade"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["std", "serde", "serde_json", "ts-rs"]
std = []
serde = ["dep:serde", "radroots-core/serde", "radroots-events/serde", "radroots-events-codec/serde"]
serde_json = ["serde", "dep:serde_json"]
ts-rs = ["dep:ts-rs", "radroots-events/ts-rs", "radroots-events/std"]

[dependencies]
radroots-core = { workspace = true, default-features = false }
radroots-events = { workspace = true, default-features = false }
radroots-events-codec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"], optional = true }
ts-rs = { workspace = true, optional = true }
