[package]
name = "radroots-core"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std", "serde", "typeshare"]
std = []
serde = ["dep:serde", "rust_decimal/serde"]
typeshare = ["dep:typeshare"]

[dependencies]
rust_decimal = { workspace = true, default-features = false }
rust_decimal_macros = { workspace = true }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { workspace = true, optional = true }