[package]
name = "radroots-events-codec-wasm"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
description = "wasm bindings for radroots event encoding and decoding"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots-events-codec-wasm"
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots-events = { workspace = true, default-features = false, features = ["std", "serde"] }
radroots-events-codec = { workspace = true, default-features = false, features = ["std", "serde_json"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
radroots-core = { workspace = true, default-features = false, features = ["std"] }
