[package]
name = "radroots-events-codec"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde", "radroots-core/serde", "radroots-events/serde"]
serde_json = ["serde", "dep:serde_json"]

[dependencies]
radroots-core = { workspace = true, default-features = false }
radroots-events = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }