[package]
name = "radroots-events-indexed"
version = "0.1.0"
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
license = "AGPLv3"
edition = "2021"

[features]
default = ["serde", "typeshare"]
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]
std = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { version = "1", optional = true }