[package]
name = "radroots-events-indexed"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "indexed manifest and checkpoint models for radroots event archives"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots-events-indexed"
readme.workspace = true

[features]
default = ["serde", "typeshare"]
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]
std = []

[dependencies]
serde = { workspace = true, default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
typeshare = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
