[package]
name = "radroots-events"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std", "serde", "typeshare"]
std = []
serde = ["dep:serde"]
typeshare = ["dep:typeshare"]

[dependencies]
radroots-core = { workspace = true, default-features = false, features = ["std", "serde", "typeshare"] }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
typeshare = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
