[package]
name = "radroots-events"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["std", "serde", "ts-rs", "typeshare"]
std = ["radroots-core/std"]
serde = ["dep:serde", "radroots-core/serde"]
ts-rs = ["dep:ts-rs"]
typeshare = ["dep:typeshare", "radroots-core/typeshare"]

[dependencies]
radroots-core = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["alloc", "derive"], optional = true }
ts-rs = { workspace = true, optional = true }
typeshare = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
