[package]
name = "radroots_events"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "nostr event models, kinds, and tag helpers for radroots integrations"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_events"
readme.workspace = true
build = "build.rs"

[features]
default = ["std", "serde", "ts-rs", "typeshare"]
std = ["radroots_core/std"]
serde = ["dep:serde", "radroots_core/serde"]
ts-rs = ["dep:ts-rs"]
typeshare = ["dep:typeshare", "radroots_core/typeshare"]

[dependencies]
radroots_core = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = [
  "alloc",
  "derive",
], optional = true }
ts-rs = { workspace = true, optional = true }
typeshare = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
