[package]
name = "radroots_events_codec_wasm"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "WebAssembly bindings for radroots-events-codec"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_events_codec_wasm"
readme = "README"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
radroots_events = { workspace = true, default-features = false, features = [
  "std",
  "serde",
] }
radroots_events_codec = { workspace = true, default-features = false, features = [
  "std",
  "serde_json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

[dev-dependencies]
radroots_core = { workspace = true, default-features = false, features = [
  "std",
] }
