[package]
name = "radroots-geocoder"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "offline geocoder queries for radroots geonames datasets"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots-geocoder"
readme.workspace = true

[dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
