[package]
name = "radroots_geocoder"
publish = ["crates-io"]
version = "0.1.0-alpha.2"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Offline geocoder and place lookup queries"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_geocoder"
readme = "README"

[dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
