[package]
name = "radroots-identity"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
description = "identity model and profile utilities for radroots nostr applications"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots-identity"
readme.workspace = true
build = "build.rs"

[features]
default = ["std", "profile", "json-file"]
std = []
profile = ["dep:radroots-events"]
json-file = ["std", "dep:radroots-runtime"]
secrecy = ["dep:secrecy"]
zeroize = ["dep:zeroize"]
ts-rs = ["dep:ts-rs"]

[dependencies]
radroots-runtime = { workspace = true, optional = true }
radroots-events = { workspace = true, optional = true, default-features = false, features = ["serde"] }
nostr = { workspace = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
