[package]
name = "radroots_identity"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "identity model and profile utilities for radroots nostr applications"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_identity"
readme.workspace = true
build = "build.rs"

[features]
default = ["std", "profile", "json-file", "nip49"]
std = ["dep:radroots_runtime_paths"]
profile = ["dep:radroots_events"]
json-file = ["std", "dep:radroots_runtime"]
nip49 = ["std", "nostr/nip49"]
secrecy = ["dep:secrecy"]
zeroize = ["dep:zeroize"]
ts-rs = ["dep:ts-rs"]

[dependencies]
radroots_runtime = { workspace = true, optional = true }
radroots_runtime_paths = { workspace = true, optional = true }
radroots_events = { workspace = true, optional = true, default-features = false, features = [
  "serde",
] }
nostr = { workspace = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
radroots_test_fixtures = { workspace = true }
tempfile = { workspace = true }
