[package]
name = "radroots-log"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["dep:thiserror", "dep:tracing-subscriber", "dep:tracing-appender"]

[dependencies]
tracing = { workspace = true, default-features = false }
thiserror = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt", "env-filter"] }
tracing-appender = { workspace = true, optional = true }