[package]
name = "radroots_log"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "Tracing-oriented logging primitives and initializers"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_log"
readme = "README"

[features]
default = ["std"]
std = [
  "dep:chrono",
  "dep:thiserror",
  "dep:tracing-subscriber",
  "dep:tracing-appender",
]

[dependencies]
chrono = { workspace = true, optional = true }
tracing = { workspace = true, default-features = false }
thiserror = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = [
  "fmt",
  "env-filter",
] }
tracing-appender = { workspace = true, optional = true }
