[package]
name = "radroots-net"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
publish = false

[features]
default = ["std"]
std = ["radroots-net-core/std"]
rt = ["radroots-net-core/rt"]
all = ["std", "rt"]

[dependencies]
radroots-net-core = { workspace = true, optional = false }
