[package]
name = "radroots_net"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "unified networking interface for the radroots sdk"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_net"
readme.workspace = true

[features]
default = ["std"]
std = ["radroots_net_core/std"]
rt = ["radroots_net_core/rt"]
all = ["std", "rt"]

[dependencies]
radroots_net_core = { workspace = true, optional = false }
