[package]
name = "radroots_net"
publish = ["crates-io"]
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["Tyson Lupul <tyson@radroots.org>"]
rust-version.workspace = true
license.workspace = true
description = "Unified networking facade over radroots-net-core"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_net"
readme = "README"

[features]
default = ["std"]
std = ["radroots_net_core/std"]
rt = ["radroots_net_core/rt"]
all = ["std", "rt"]

[dependencies]
radroots_net_core = { workspace = true, optional = false }
