[package]
name = "radroots-nostr-accounts"
version.workspace = true
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true

[features]
default = ["std", "file-store", "memory-vault"]
std = ["dep:serde", "dep:serde_json", "dep:radroots-identity", "dep:radroots-runtime"]
file-store = ["std"]
memory-vault = ["std"]
os-keyring = ["std", "dep:keyring"]
ndb-bridge = ["std", "dep:radroots-nostr-ndb"]

[dependencies]
keyring = { version = "2.3.3", optional = true }
radroots-identity = { workspace = true, optional = true, default-features = false, features = ["std", "profile", "json-file"] }
radroots-nostr-ndb = { workspace = true, optional = true, default-features = false, features = ["ndb", "giftwrap", "rt"] }
radroots-runtime = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
