[package]
name = "radroots-nostr-accounts"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = ["triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr"]
rust-version.workspace = true
license.workspace = true
description = "nostr protocol account primitives and vault interfaces for the radroots sdk"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots-nostr-accounts"
readme.workspace = true

[features]
default = ["std", "file-store", "memory-vault"]
std = ["dep:serde", "dep:serde_json", "dep:radroots-identity", "dep:radroots-runtime"]
file-store = ["std"]
memory-vault = ["std"]
os-keyring = ["std", "dep:keyring"]
ndb-bridge = ["std", "dep:radroots-nostr-ndb"]

[dependencies]
keyring = { version = "2.3.3", optional = true, default-features = false, features = ["linux-no-secret-service", "platform-macos", "platform-ios", "platform-windows"] }
radroots-identity = { workspace = true, optional = true, default-features = false, features = ["std", "profile", "json-file"] }
radroots-nostr-ndb = { workspace = true, optional = true, default-features = false, features = ["ndb", "giftwrap", "rt"] }
radroots-runtime = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
