[package]
name = "radroots-nostr-signer"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "transport-neutral signer domain models and persistence primitives for the radroots sdk"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots-nostr-signer"
readme.workspace = true

[dependencies]
nostr = { workspace = true }
radroots-identity = { workspace = true, default-features = false, features = [
  "std",
  "profile",
] }
radroots-nostr-connect = { workspace = true }
radroots-runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
