[package]
name = "radroots_nostr"
version = "0.1.0-alpha.1"
edition.workspace = true
authors = [
  "triesap npub1tr33s4tj2le2kk9yzhfphdtss26gyn8kv7savnnjhj794nqp333q8e7grr",
]
rust-version.workspace = true
license.workspace = true
description = "nostr protocol primitives and adapter interfaces for the radroots sdk"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/radroots_nostr"
readme.workspace = true

[features]
default = ["std"]
std = []
client = ["std", "dep:nostr-sdk", "dep:radroots_identity"]
codec = [
  "dep:radroots_events",
  "dep:radroots_events_codec",
  "radroots_events_codec/nostr",
]
events = [
  "dep:radroots_events",
  "dep:radroots_events_codec",
  "radroots_events/std",
  "radroots_events/serde",
  "radroots_events_codec/std",
]
http = ["dep:reqwest"]
nip17 = ["std", "codec", "nostr/nip44", "nostr/nip59"]

[dependencies]
radroots_events = { workspace = true, optional = true, default-features = false }
radroots_events_codec = { workspace = true, optional = true, default-features = false }
radroots_identity = { workspace = true, optional = true, default-features = true }
nostr = { workspace = true, features = ["nip04"] }
nostr-sdk = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
radroots_test_fixtures = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
